maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: illegal start of statement
  [BiscuitX, BiscuitY] = DetectBiscuit()
  ^JediEscaper:13: error: ';' expected but '[' found.
        return[x, y]
              ^